# local-coding-agent

./: .gitignore  9781806029570.md  INSTALL.md  PHASE6_PLAN.md  PLAN.md  PRODUCT_REQUIREMENTS.md  PROJECT_SUMMARY.md  README.md  extract_pdf.py  pyproject.toml
docs/: agentic-architectural-patterns.md  example.txt
sandbox/: extract_links.py  file.txt  hello.py  sort_random_numbers.py  todo_manager.py
scripts/: run_integration.sh
src/local_agent/: __init__.py  __main__.py  agent_core.py  browser_engine.py  config.py  cron.py  diff_review.py  document_indexer.py  explainability.py  icl.py  lsp_client.py  mcp_client.py  model_router.py  multi_agent.py  project_context.py  rag.py  retry.py  safety.py  session_persist.py  task_planner.py  terminal_ui.py  tool_registry.py  vector_store.py
src/local_coding_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
tests/: test_agent_core.py  test_agent_human_io.py  test_browser_engine.py  test_code_command.py  test_config.py  test_cron.py  test_diff_review.py  test_document_indexer.py  test_explainability.py  test_file_tools.py  test_git_tools.py  test_human_loop.py  test_icl.py  test_integration.py  test_lsp_client.py  test_mcp_client.py  test_memory_store.py  test_model_router.py  test_model_routing.py  test_multi_agent.py  test_project_context.py  test_provider_command.py  test_rag.py  test_retry.py  test_safety.py  test_search_tools.py  test_session_persist.py  test_session_search.py  test_skill_manage.py  test_task_planner.py  test_terminal_tools.py  test_terminal_ui.py  test_tool_registry.py  test_vector_store.py
(+9 files in other folders)
